[metadata]
name = roslabware
description = ROS wrapper to interact with serial drivers
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cooper-group/roslabware
author = Cooper group
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    pydantic>=1.9.0
    pymodbus==2.5.3
    pyyaml>=5.0
    requests>=2.23
    urllib3>=1.21.1
python_requires = >=3.8
include_package_data = True
platforms = windows, linux
zip_safe = True

[options.extras_require]
docs =
    sphinx~=4.4.0
    sphinx-autodoc-typehints>=1.11.0
    sphinx-rtd-theme>=1.0.0
testing =
    Twisted>=22.2.0
    coverage>=6.3.0
    pytest>=6
    pytest-mock>=3.9.0
    pytest-xdist>=2.5
