<?xml version="1.0"?>
<package format="2">
  <name>roslabware</name>
  <version>0.1.0</version>
  <description>ROS wrapper for pylabware library</description>

  <maintainer email="h.fakhruldeen@liverpool.ac.uk">Hatem Fakhruldeen</maintainer>
  <maintainer email="s.manzano@liverpool.ac.uk">Sebastian Manzano</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslabware_msgs</exec_depend>
  <exec_depend>roslabware_drivers</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
