<?xml version="1.0"?>
<package format="2">
  <name>roslabware_drivers</name>
  <version>0.1.0</version>
  <description>ROS wrappers for pylabware devices.</description>

  <maintainer email="h.fakhruldeen@liverpool.ac.uk">Hatem Fakhruldeen</maintainer>
  <maintainer email="s.manzano@liverpool.ac.uk">Sebastian Juan Manzano</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslabware_msgs</build_depend>
  <exec_depend>roslabware_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
